Add maven tasks to Jenkinsfile

--- a/pom.xml
+++ b/pom.xml
@@ -126,4 +126,8 @@
         </repository>
     </repositories>
 
+    <properties>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
+    </properties>
+
 </project>
