--- a/pom.xml
+++ b/pom.xml
@@ -172,11 +172,6 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.20.1</version>
-                    <configuration>
-                        <systemPropertyVariables>
-                            <arquillian.launch>glassfish-embedded</arquillian.launch>
-                        </systemPropertyVariables>
-                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>com.spotify</groupId>
@@ -212,6 +207,19 @@
                     <version>6.0.7.Final</version>
                 </dependency>
             </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <excludes>
+                                <exclude>**/nl/svendubbeld/fontys/test/embedded/**</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
         <profile>
             <id>arquillian-glassfish-embedded</id>
@@ -219,10 +227,17 @@
                 <activeByDefault>false</activeByDefault>
             </activation>
             <dependencies>
-                <dependency>
+                <!--<dependency>
                     <groupId>mysql</groupId>
                     <artifactId>mysql-connector-java</artifactId>
                     <version>5.1.45</version>
+                    <scope>test</scope>
+                </dependency>-->
+
+                <dependency>
+                    <groupId>com.h2database</groupId>
+                    <artifactId>h2</artifactId>
+                    <version>1.4.196</version>
                     <scope>test</scope>
                 </dependency>
 
@@ -250,6 +265,12 @@
                             <systemPropertyVariables>
                                 <arquillian.launch>glassfish-embedded</arquillian.launch>
                             </systemPropertyVariables>
+                            <excludes>
+                                <exclude>**/nl/svendubbeld/fontys/test/unit/**</exclude>
+                            </excludes>
+                            <includes>
+                                <include>**/nl/svendubbeld/fontys/test/embedded/**</include>
+                            </includes>
                         </configuration>
                     </plugin>
                 </plugins>
