--- a/pom.xml
+++ b/pom.xml
@@ -293,13 +293,13 @@
 
     <distributionManagement>
         <repository>
-            <id>c53325995254-releases</id>
+            <id>artifactory</id>
             <name>c53325995254-releases</name>
             <url>http://192.168.25.98:8081/artifactory/release-local</url>
         </repository>
 
         <snapshotRepository>
-            <id>c53325995254-snapshots</id>
+            <id>artifactory</id>
             <name>c53325995254-snapshots</name>
             <url>http://192.168.25.98:8081/artifactory/dev-local</url>
         </snapshotRepository>
