Run sonar on build

--- a/pom.xml
+++ b/pom.xml
@@ -204,7 +204,7 @@
                         </execution>
                     </executions>
                     <configuration>
-                        <repository>kwetter</repository>
+                        <repository>svendub/kwetter</repository>
                     </configuration>
                 </plugin>
             </plugins>
@@ -244,13 +244,6 @@
                 <activeByDefault>false</activeByDefault>
             </activation>
             <dependencies>
-                <!--<dependency>
-                    <groupId>mysql</groupId>
-                    <artifactId>mysql-connector-java</artifactId>
-                    <version>5.1.45</version>
-                    <scope>test</scope>
-                </dependency>-->
-
                 <dependency>
                     <groupId>com.h2database</groupId>
                     <artifactId>h2</artifactId>
