--- a/server/pom.xml
+++ b/server/pom.xml
@@ -133,6 +133,12 @@
             <artifactId>rewrite-config-prettyfaces</artifactId>
             <version>3.4.1.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.timgroup</groupId>
+            <artifactId>jgravatar</artifactId>
+            <version>1.1</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
