--- a/client/src/main/client/.editorconfig
+++ b/client/src/main/client/.editorconfig
@@ -11,3 +11,7 @@ trim_trailing_whitespace = true
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
+
+# Ugly, but important that these templates do not contain a final new line
+[{src/app/anchor/anchor.component.html,src/app/text/text.component.html}]
+insert_final_newline = false
