--- a/server/pom.xml
+++ b/server/pom.xml
@@ -135,9 +135,15 @@
         </dependency>
 
         <dependency>
-            <groupId>com.timgroup</groupId>
-            <artifactId>jgravatar</artifactId>
-            <version>1.1</version>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>24.1-jre</version>
         </dependency>
     </dependencies>
 
