--- a/server/pom.xml
+++ b/server/pom.xml
@@ -313,6 +313,12 @@
                     <version>5.0</version>
                     <scope>provided</scope>
                 </dependency>
+
+                <dependency>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-core</artifactId>
+                    <version>2.8.9</version>
+                </dependency>
             </dependencies>
 
             <build>
