--- a/client/src/main/client/package.json
+++ b/client/src/main/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "client",
-  "version": "0.0.0",
+  "name": "@svendub/kwetter-client",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
