--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
                 <artifactId>kwetter-glassfish</artifactId>
                 <version>1.1.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson</groupId>
+                <artifactId>jackson-bom</artifactId>
+                <version>2.9.0</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
