--- a/client/src/main/client/package.json
+++ b/client/src/main/client/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@auth0/angular-jwt": "^1.1.0",
+    "@ngx-translate/core": "^9.1.1",
+    "@ngx-translate/http-loader": "2.0.1",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
