--- a/client/src/main/client/package.json
+++ b/client/src/main/client/package.json
@@ -27,6 +27,7 @@
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "flag-icon-css": "^3.0.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "moment": "^2.22.0",
