--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,8 @@
     </repositories>
 
     <properties>
-        <version.arquillian_universe>1.2.0.1</version.arquillian_universe>
+        <arquillian_universe.version>1.2.0.1</arquillian_universe.version>
+        <jersey.version>2.26</jersey.version>
     </properties>
 
     <distributionManagement>
