--- a/client/src/main/client/package.json
+++ b/client/src/main/client/package.json
@@ -31,6 +31,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "moment": "^2.22.0",
+    "ng2-toastr": "^4.1.2",
     "ngx-moment": "^2.0.0-rc.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
