--- a/server/pom.xml
+++ b/server/pom.xml
@@ -289,6 +289,13 @@
                     <artifactId>hibernate-validator</artifactId>
                     <version>6.0.7.Final</version>
                 </dependency>
+
+                <dependency>
+                    <groupId>org.glassfish.web</groupId>
+                    <artifactId>javax.el</artifactId>
+                    <version>2.2.6</version>
+                    <scope>test</scope>
+                </dependency>
             </dependencies>
             <build>
                 <plugins>
